athena-dev-eks-manifests/components/07. istio/istio/athena-destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: argocd
  namespace: istio-system
spec:
  host: argocd
  trafficPolicy:
    tls:
      mode: DISABLE
